--- a/Ux_style.css
+++ b/Ux_style.css
@@ -488,176 +488,176 @@
             
             .protrow1 .smartphone:nth-child(1) {
                 
-                background-image: url(Imagensux/Screens/tela-01.svg);
+                background-image: url(Imagens/Screens/tela-01.svg);
             
             }
                         
             
             .protrow1 .smartphone:nth-child(2) {
                 
-                background-image: url(Imagensux/Screens/tela-02.svg);
+                background-image: url(Imagens/Screens/tela-02.svg);
             
             }
             
             .protrow2 .smartphone:nth-child(1) {
                 
-                background-image: url(Imagensux/Screens/tela-03.svg);
+                background-image: url(Imagens/Screens/tela-03.svg);
             
             }
             
             .protrow2 .smartphone:nth-child(2) {
                 
-                background-image: url(Imagensux/Screens/tela-04.svg);
+                background-image: url(Imagens/Screens/tela-04.svg);
             
             }
             
             .protrow2 .smartphone:nth-child(3) {
                 
-                background-image: url(Imagensux/Screens/tela-05.svg);
+                background-image: url(Imagens/Screens/tela-05.svg);
             
             }
             
             .protrow2 .smartphone:nth-child(4) {
                 
-                background-image: url(Imagensux/Screens/tela-06.svg);
+                background-image: url(Imagens/Screens/tela-06.svg);
             
             }
             
             .protrow3 .smartphone:nth-child(1) {
                 
-                background-image: url(Imagensux/Screens/tela-07.svg);
+                background-image: url(Imagens/Screens/tela-07.svg);
             
             }
             
              .protrow3 .smartphone:nth-child(2) {
                 
-                background-image: url(Imagensux/Screens/tela-08.svg);
+                background-image: url(Imagens/Screens/tela-08.svg);
             
             }
             
              .protrow3 .smartphone:nth-child(3) {
                 
-                background-image: url(Imagensux/Screens/tela-09.svg);
+                background-image: url(Imagens/Screens/tela-09.svg);
             
             }
             
              .protrow3 .smartphone:nth-child(4) {
                 
-                background-image: url(Imagensux/Screens/tela-10.svg);
+                background-image: url(Imagens/Screens/tela-10.svg);
             
             }
             
              .protrow3 .smartphone:nth-child(5) {
                 
-                background-image: url(Imagensux/Screens/tela-11.svg);
+                background-image: url(Imagens/Screens/tela-11.svg);
             
             }
             
              .protrow4 .smartphone:nth-child(1) {
                
-                background-image: url(Imagensux/Screens/tela-12.svg);
+                background-image: url(Imagens/Screens/tela-12.svg);
             
             }
             
             .protrow4 .smartphone:nth-child(2) {
                
-                background-image: url(Imagensux/Screens/tela-13.svg);
+                background-image: url(Imagens/Screens/tela-13.svg);
             
             }
             
             .protrow4 .smartphone:nth-child(3) {
                
-                background-image: url(Imagensux/Screens/tela-14.svg);
+                background-image: url(Imagens/Screens/tela-14.svg);
             
             }
             
             .protrow5 .smartphone:nth-child(1) {
                
-                background-image: url(Imagensux/Screens/tela-15.svg);
+                background-image: url(Imagens/Screens/tela-15.svg);
             
             }
             
             .protrow5 .smartphone:nth-child(2) {
                
-                background-image: url(Imagensux/Screens/tela-16.svg);
+                background-image: url(Imagens/Screens/tela-16.svg);
             
             }
             
             .protrow6 .smartphone:nth-child(1) {
                
-                background-image: url(Imagensux/Screens/tela-17.svg);
+                background-image: url(Imagens/Screens/tela-17.svg);
             
             }
             
             .protrow6 .smartphone:nth-child(2) {
                
-                background-image: url(Imagensux/Screens/tela-18.svg);
+                background-image: url(Imagens/Screens/tela-18.svg);
             
             }
             
              .protrow6 .smartphone:nth-child(3) {
                
-                background-image: url(Imagensux/Screens/tela-19.svg);
+                background-image: url(Imagens/Screens/tela-19.svg);
             
             }
             
              .protrow6 .smartphone:nth-child(4) {
                
-                background-image: url(Imagensux/Screens/tela-20.svg);
+                background-image: url(Imagens/Screens/tela-20.svg);
             
             }
             
              .protrow6 .smartphone:nth-child(5) {
                
-                background-image: url(Imagensux/Screens/tela-21.svg);
+                background-image: url(Imagens/Screens/tela-21.svg);
             
             }
             
              .protrow7 .smartphone:nth-child(1) {
                
-                background-image: url(Imagensux/Screens/tela-22.svg);
+                background-image: url(Imagens/Screens/tela-22.svg);
             
             }
             
              .protrow7 .smartphone:nth-child(2) {
                
-                background-image: url(Imagensux/Screens/tela-23.svg);
+                background-image: url(Imagens/Screens/tela-23.svg);
             
             }
             
              .protrow8 .desktop:nth-child(1) {
                 
-                background-image: url(Imagensux/ScreensDesktop/Desktop-01.svg);
+                background-image: url(Imagens/ScreensDesktop/Desktop-01.svg);
                     
             }
             
              .protrow8 .desktop:nth-child(2) {
                 
-                background-image: url(Imagensux/ScreensDesktop/Desktop-02.svg);
+                background-image: url(Imagens/ScreensDesktop/Desktop-02.svg);
                     
             }
             
              .protrow8 .desktop:nth-child(3) {
                 
-                background-image: url(Imagensux/ScreensDesktop/Desktop-03.svg);
+                background-image: url(Imagens/ScreensDesktop/Desktop-03.svg);
                     
             }
             
              .protrow8 .desktop:nth-child(4) {
                 
-                background-image: url(Imagensux/ScreensDesktop/Desktop-04.svg);
+                background-image: url(Imagens/ScreensDesktop/Desktop-04.svg);
                     
             }
             
               .protrow8 .desktop:nth-child(5) {
                 
-                background-image: url(Imagensux/ScreensDesktop/Desktop-05.svg);
+                background-image: url(Imagens/ScreensDesktop/Desktop-05.svg);
                     
             }
             
               .protrow8 .desktop:nth-child(6) {
                 
-                background-image: url(Imagensux/ScreensDesktop/Desktop-06.svg);
+                background-image: url(Imagens/ScreensDesktop/Desktop-06.svg);
                     
             }
             
