--- a/Ux_style.css
+++ b/Ux_style.css
@@ -14,7 +14,7 @@
             width: 100%;
             background-color: black;
             height: 6em;
-            position: relative;;
+            position: relative;
     }
     
             header:before{
@@ -731,23 +731,18 @@
                 ;
             }
         
-            @media only screen and (max-width: 1300px) {
+            @media only screen and (max-width: 400px) {
 
                 body {
 
-                    margin: 0 1em;
+                    margin: 0;
                 }
 
-                header{ 
-
-                    display: none;
-                }
-
-
+    
 
                 article {
 
-                    border: 1px red solid;
+                   
                     flex-direction: column-reverse;
                     align-content: center;
 
@@ -765,17 +760,26 @@
 
                 .logodesc {
 
-                    border: 1px red solid;
                     width:100%;
                     margin: 0;
                     display: flex;
                     flex-direction: column;
                 }
 
+                .logodesc::before {
+
+                    display: none;
+                }
+
+                .logodesc p {
+
+                    font-size: 1.5em;
+                };
+
 
                 .logodesc img {
 
-                    width: 40%;
+                    width: 20vh;
                     align-self: center;
 
                 }
@@ -783,7 +787,7 @@
                 section {
                 
                 
-                    width: 100%;
+                    width: 90%;
                     margin: auto;
                     text-align: left;
                 }
