--- a/Ux_style.css
+++ b/Ux_style.css
@@ -136,7 +136,7 @@
             
              .abordagem, .benchmark, .usuarios, .analise, .idea {
                 
-                border: 1px red solid;
+                bordr: 1px red solid;
                 margin-top: 10em;
                 text-align: center;
                 overflow: hidden;
@@ -742,8 +742,6 @@
                     display: none;
                 }
 
-    
-
                 article {
 
                     flex-direction: column-reverse;
@@ -773,7 +771,7 @@
                 .logodesc p {
 
                     font-size: 1.5em;
-                };
+                }
 
 
                 .logodesc img {
@@ -784,12 +782,75 @@
                 }
 
                 section {
-                
-                
+       
                     width: 90%;
                     margin: auto;
                     text-align: left;
                 }
+
+                .abordagem, .benchmark, .usuarios, .analise, .idea {
+                
+                    text-align: left;
+                    width: 90%;
+                    margin: auto;
+                  
+                }
+
+                .abordagem p, .benchmark p, .usuarios p, .analise p, .idea p {
+                
+                    text-align: left;
+                    width: 100%;
+                  
+                }
+
+                .abordagem .logo {
+                
+                    width: 30%;
+                    display: block;
+                    margin: 4em auto 0em;
+                  
+                }
+
+                .abordagem .abordagemimg {
+                
+                    width: 100%;
+                    margin: auto;
+            
+                }
+
+                .analise img, .idea img {
+                
+                    width: 100%;
+                }
+                
+                .idea img { 
+                    
+                    width: 100%;
+                
+                }
+
+                .benchmark img {
+
+                   display: none;
+
+
+        
+                }
+
+                .benchcontainer {
+                
+                    border: 2px #E5ECF1 solid;
+                    width: 100%;
+                    height: auto;
+                    padding: 1em;
+                    margin: 1em auto;
+                    border-radius: 30px 30px 30px 0px;
+                    box-shadow: 0px 10px 0px 0px rgba(229,236,241,1);
+                    text-align: left;
+                    display: inline-block;
+                    
+                }
+                
 
 
 
