--- a/Ux_style.css
+++ b/Ux_style.css
@@ -802,10 +802,7 @@
                   
                 }
 
-                
-
-                
-
+               
                 .abordagem p, .benchmark p, .usuarios p, .analise p, .idea p, .style p {
                 
                     text-align: left;
@@ -814,12 +811,42 @@
                   
                 }
 
+                section h1{
+
+                    font-size: 2.5em;
+                }
+
+                section p{
+
+                    font-size: 1.25em;
+                }
+
+
+                h1 {
+
+                    font-size: 2.5em;
+                }
+
+                h2 {
+
+                    font-size: 1.5em;
+                }
+
+                h3 {
+            
+                    font-size: 1.5em;
+                    color: #727D83;
+                    margin: 0;
+                    text-align: center;
+                 
+                }
+
                 ul {
                     font-size: 1.25em;
                 }
 
-                
 
+            
                 .abordagem .logo {
                 
                     width: 30%;
@@ -1004,28 +1031,7 @@
                         transform: translate(-142px, -10px);
                     
                     }
-
-
-                    h1 {
-
-                        font-size: 2.5em;
-                    }
-
-                    h2 {
-
-                        font-size: 1.5em;
-                    }
-
-                    h3 {
-                
-                        font-size: 1.5em;
-                        color: #727D83;
-                        margin: 0;
-                        text-align: center;
-                     
-                    }
-
-                  
+      
                     .smartphone2, .notebook {
                         display: none;
 
