--- a/Ux_style.css
+++ b/Ux_style.css
@@ -506,6 +506,7 @@
                 margin-top: 1em;
                 background-color: white;
                 border-radius: 10px;
+                box-shadow: -1px 13px 11px 2px rgba(0,0,0,0.10);
             }
 
             
