--- a/Index_style.css
+++ b/Index_style.css
@@ -2,9 +2,6 @@
     html {
         
         scroll-behavior: smooth;
-      
-    
-        
     }
     
 
@@ -15,14 +12,15 @@
   
     }
     
-    .linha1 {
+     .linha1 {
         
         position: absolute;
         top: 0;
         left: 10em;
         width: 1px;
         height: 100%;
-        background-color:#c1c1c1;
+        background-color:#ce0000;
+        
        
     }
     
@@ -327,7 +325,6 @@
     
       .first-article {
         
-     
         width: 50%;
         height: 60em;
         margin: auto;
@@ -357,7 +354,7 @@
         position: absolute;
         top:0;
         left:-.025em;
-          position: relative;
+        position: relative;
         
         
         
@@ -462,10 +459,12 @@
         width: 30em;
         height: 30em;
         border: 1px gray solid;
+        display: flex;
+        justify-content: center;
+        align-content: center;
         position: absolute;
         top: 25em;
         left: 0em;
-        padding: 120px 0 0 90px;
         box-sizing: border-box;
     
         
@@ -482,8 +481,7 @@
         top: -1em;
         right: 3em;
 
-        
-       
+  
         
     }
     
@@ -496,24 +494,13 @@
         position: absolute;
         bottom: 3em;
         left: -1em;
-        
-
-        
-       
-        
+  
     }
     
     
      .first-article img {
         
-        width: 20em;
-        position: absolute;
-        top: auto;
-        left:auto;
-        bottom: auto;
-        left: auto;
-
-         
+        width: 60%;
         z-index: 1;
     }
     
@@ -576,7 +563,6 @@
         margin: auto;
         margin-top: 9em;
         margin-bottom: 20em;
-        /* border: 1px red solid;  */ 
         position: relative;
        
     }
@@ -588,12 +574,10 @@
         position: absolute;
         top:0;
         right:0;
-        
-        
+  
     }
     
   
-    
       .second-article  h2 {
         
         font-family: Bebas kai;
@@ -602,14 +586,10 @@
         top:1.6em;
         right:0;
         color: #6666; 
-         
-    
-        
+ 
     }
     
-   
-    
-    
+
       .second-article h3 {
         
         font-family: Bebas kai;
@@ -618,9 +598,7 @@
         top:2.4em;
         right:0;
         color: #ebebeb; 
-         
-    
-        
+ 
     }
     
       .second-article h4 {
@@ -634,15 +612,9 @@
         color: white;
         
         text-shadow: -1px -1px 0 #e3e3e3, 1px -1px 0 #e3e3e3, -1px 1px 0 #e3e3e3, 1px 1px 0 #e3e3e3;
-        
-       
-            
+   
     }
-    
-  
-    
-    
-    
+
     .second-article p {
         
         position: absolute;
@@ -674,10 +646,12 @@
         width: 30em;
         height: 30em;
         border: 1px gray solid;
+        display: flex;
+        justify-content: center;
+        align-content: center;
         position: absolute;
         top: 25em;
         right: 0;
-        padding: 40px 0 10px 90px;
         box-sizing: border-box;
     
         
@@ -708,27 +682,16 @@
         position: absolute;
         bottom: 3em;
         left: -1em;
-        
 
-        
-       
-        
     }
     
     
      .second-article img {
         
-        width: 20em;
-        position: relative;
-        top: 0em;
-        right: 0em;
+        width: 60%; 
         z-index: 1;
     }
-    
-    
-  
 
-    
      .second-article .button {
     
       border: none;
@@ -766,9 +729,9 @@
     footer {
         
       
-        height: 100vh;
+        height: auto;
         
-       background: rgb(0,0,0); 
+        background: rgb(0,0,0); 
         background: linear-gradient(180deg, rgba(0,0,0, 50%) 55%, rgba(30,32,34,50%) 91%), url(Imagens/fotofooter.jpg);
         background-repeat: no-repeat;
         background-position: top right;
@@ -869,7 +832,7 @@
     
     .icons-container {
         height 2em;
-        transform: translate(0px, 60px);
+        margin: 6em 0em 3em 0em;
        
     }
     
@@ -880,6 +843,7 @@
         display: inline-block;
         margin: 0 1em 0 0;
         transition:0.5s;
+        
       
     }
     
@@ -900,438 +864,5 @@
      
     }
     
-    
-    
-                                         @media only screen and (max-width: 1550px) {
-                                             
-                                             
-            .linha1 {
-        
-        position: absolute;
-        top: 0;
-        left: 3.7em;
-        width: 1px;
-        height: 100%;
-        background-color:#c1c1c1;
-       
-    }
-    
-    .linha1:after {
-        
-        content: '';
-        position:fixed;
-  
-        top:5em;
-        left: 3.7em;
-        
-         width: 0;
-      height: 0;
-      border-top: 1em solid transparent;
-      border-left: 1em solid #c1c1c1;
-      border-bottom: 1em solid transparent;
-        
-         
-    }                                     
-                                             
-                                             
-                                             
-             header {
-         height: 90em;
-                                                 
-        }                                 
-                                             
-                                             
-            .logo-header {
-        
-        width: 22em;
-        display: inline-block;
-        margin-top: 4em;
-       
-        
-        
-        
-    }
-    
-    .foto-perfil {
-        
-        width: 11em;
-        border: 3px white solid;
-        margin: 0 ;
-        
-        
-    }
 
-  
-    
-    nav {
-        
-        position: relative;
-        margin-top: 8em;
-      
-        
-    }
-    
-    
-    nav ul {
-       
-        text-align: center;
-       
-    }
-    
-  
-    
-    nav ul:before {
-        
-        content: "";
-        left: 50%;
-        width: 3em;
-        height: 1px;
-        position: absolute;
-        top:-1.2em;
-        background-color: white;
-       
-        transition:  transform 1s;
-        transform: scale(0, 2);
-
-    }
-    
-    
-      nav ul:after {
-        
-        content: "";
-        left: 50%;
-        width: 3em;
-        height: 1px;
-        position: absolute;
-        top: 26em;
-        background-color: white;
-          
-        transition:  transform 1s;
-        transform: scale(0, 2);
-    }
-    
-    
-    nav ul:hover:before{
-        
-    
-        transform: scale(2, 1);
-
-       
-    }
-    
-    nav ul:hover:after{
-        
-       
-        transform: scale(2, 1);
-
-      
-    }
-    
-    
-    
-     nav li {
-        
-       list-style: none;
-       color: red;
-       font-family: Bebas Kai;
-       font-size: 5em;
-       line-height: 1em;
-       letter-spacing: 2px;
-       transition: .3s;
-       
-      
-        text-shadow: -1px -1px 0 #ffffff, 1px -1px 0 #ffffff, -1px 1px 0 #ffffff, 1px 1px 0 #ffffff;
-       
-
-    }
-    
-  
-    
-      nav li:hover {
-        
-       font-family: Bebas Kai;
-       text-shadow: none;
-       color: white;
-       cursor:crosshair;
-          
-          
-             
-       
-        
-    }
-    
-      nav li a{
-        
-       text-decoration: none;
-          color: black;
-       
-
-    }
-      nav li a:visited{
-        
-       color: black;
-       
-
-    }
-    
-     nav li a:hover{
-        
-       color: white;
-         cursor: crosshair;
-       
-
-    }
-                                       
-                                             
-        
-            .first-article {
-        
      
-        width: 50%;
-        height: 60em;
-        margin: auto;
-        margin-top: 8em;
-        margin-bottom: 20em;
-         /* border: 1px red solid; */ 
-        position: relative;
-                right: 8em;
-               
-        
-   
-       
-    }
-        
-           .first-article p {
-        
-        position: absolute;
-        top: 14em;
-        right: -11em;
-        width: 50%;
-        font-size: 1.7em;
-        font-family: Agency FB;
-        text-align: left; 
-        display: block;
-               
-        
-    }
-           .first-article .button {
-    
-      border: none;
-      background-color: white;
-      color: black;
-      font-size: 4em;
-      cursor: crosshair;
-      font-family: Bebas Kai;
-        
-        position: absolute;
-        right: -4em;
-        bottom: 1em;
-        
-        
-}
-                                             
-         .second-article {
-        
-     
-        width: 50%;
-        height: 60em;
-        margin: auto;
-        margin-top: 9em;
-        margin-bottom: 20em;
-        position: relative;
-             right: 8em;
-       
-    }  
-                                             
-       .second-article h1 {
-        
-        font-family: Bebas kai;
-        font-size: 11em;
-        position: absolute;
-        top:0;
-        right:-1.5em;
-        
-        
-    }
-    
-  
-    
-      .second-article  h2 {
-        
-        font-family: Bebas kai;
-        font-size: 6em;
-        position: absolute;
-        top:1.6em;
-        right:-2.7em;
-        color: #6666; 
-         
-    
-        
-    }
-    
-   
-    
-    
-      .second-article h3 {
-        
-        font-family: Bebas kai;
-        font-size: 6em;
-        position: absolute;
-        top:2.4em;
-        right:-2.7em;
-        color: #ebebeb; 
-         
-    
-        
-    }
-    
-      .second-article h4 {
-    
-        font-family: Bebas Kai;
-        font-size: 30em;
-        position: absolute;
-        top: -.2em;
-        left: .5em;
-        z-index: -2;
-        color: white;
-        
-        text-shadow: -1px -1px 0 #e3e3e3, 1px -1px 0 #e3e3e3, -1px 1px 0 #e3e3e3, 1px 1px 0 #e3e3e3;
-        
-       
-            
-    }
-    
-  
-    
-    
-    
-    .second-article p {
-        
-        position: absolute;
-        top: 14em;
-        left: 0em;
-        width: 50%;
-        font-size: 1.7em;
-        font-family: Agency FB;
-        text-align: left; 
-        
-    }
-    
-    .second-article p:before {
-        
-        content: "";
-        background-color: black;
-        height: 7em;
-        width: 2px;
-        position: absolute;
-        top: 0;
-        left:-1em;
-        
-    }
-    
-    
-    .second-article .quadrado-imagem {
-        
-        
-        width: 30em;
-        height: 30em;
-        border: 1px gray solid;
-        position: absolute;
-        top: 25em;
-        right: -16em;
-        padding: 7em 2em;
-        box-sizing: border-box;
-    
-        
-    }
-    
-    
-     .second-article .quadrado-imagem:after{
-        
-        content: "";
-        width: 400px;
-        height: 550px;
-        background-color: white;
-        position: absolute;
-        top: -1em;
-        right: 3em;
-
-        
-       
-        
-    }
-    
-     .second-article .quadrado-imagem:before{
-        
-        content: "";
-        width: 550px;
-        height: 400px;
-        background-color: white;
-        position: absolute;
-        bottom: 3em;
-        left: -1em;
-        
-
-        
-       
-        
-    }
-    
-    
-     .second-article img {
-        
-        width: 25em;
-        position: relative;
-        top: 0em;
-        right: 0em;
-        z-index: 1;
-    }
-    
-    
-  
-
-    
-     .second-article .button {
-    
-      border: none;
-      background-color: white;
-      color: black;
-      font-size: 4em;
-      cursor: crosshair;
-      font-family: Bebas Kai;
-        
-        position: absolute;
-        left: 0;
-        bottom: 1em;
-        
-        
-}
-    .second-article .button::after  {
-        
-        content: '';
-        display: block;
-        width: 1em;
-        height: 2px;
-        background: #080808;
-        transition: width .3s;
-    }
-    
-    
-    .second-article .button:hover::after{
-        
-        width: 100%;
-        transition: width .3s;     
-        
-    }                                         
-    
-                                             footer {
-                                                 height: 120vh;
-                                             }
-                                             
-                                            
-    }
-    
-    
-    
-
-                                  
