--- a/Index_style.css
+++ b/Index_style.css
@@ -1,7 +1,6 @@
 
  @font-face {
-    font-family: Bebas kai;
-    font-weight: normal;
+    font-family: Bebas kai regular;
     src: url(Fonts/BebasKai.otf);
   }
 
