--- a/Index_style.css
+++ b/Index_style.css
@@ -1,10 +1,4 @@
 
- @font-face {
-    font-family: Bebas kai regular;
-    src: url(Fonts/BebasKai.otf);
-  }
-
-
     html {
         
         scroll-behavior: smooth;
@@ -238,7 +232,7 @@
      nav li {
         
        list-style: none;
-       font-family: Bebas Kai ;
+       font-family: 'Bebas Neue', cursive;
        font-size: 4em;
        line-height: 1em;
        letter-spacing: 2px;
@@ -253,7 +247,7 @@
     
       nav li:hover {
         
-       font-family: bebas kai;
+        font-family: 'Bebas Neue', cursive;
           
       
        color: white;
@@ -336,7 +330,7 @@
     
       .first-article h1 {
         
-        font-family: Bebas kai;
+        font-family: 'Bebas Neue', cursive;
         font-size: 11em;
         position: absolute;
         top:0;
@@ -367,7 +361,7 @@
     
       .first-article  h2 {
         
-        font-family: Bebas kai;
+        font-family: 'Bebas Neue', cursive;
         font-size: 6em;
         position: absolute;
         top:1.6em;
@@ -383,7 +377,7 @@
     
       .first-article h3 {
         
-        font-family: Bebas kai;
+        font-family: 'Bebas Neue', cursive;
         font-size: 6em;
         position: absolute;
         top:2.4em;
@@ -396,7 +390,7 @@
     
       .first-article h4 {
     
-        font-family: Bebas Kai;
+        font-family: 'Bebas Neue', cursive;
         font-size: 30em;
         position: absolute;
         top: -.2em;
@@ -514,7 +508,7 @@
       color: black;
       font-size: 4em;
       cursor: crosshair;
-      font-family: Bebas Kai;
+      font-family: 'Bebas Neue', cursive;
         
         position: absolute;
         right: 0;
@@ -556,7 +550,7 @@
     
       .second-article h1 {
         
-        font-family: Bebas kai;
+        font-family: 'Bebas Neue', cursive;
         font-size: 11em;
         position: absolute;
         top:0;
@@ -567,7 +561,7 @@
   
       .second-article  h2 {
         
-        font-family: Bebas kai;
+        font-family: 'Bebas Neue', cursive;
         font-size: 6em;
         position: absolute;
         top:1.6em;
@@ -579,7 +573,7 @@
 
       .second-article h3 {
         
-        font-family: Bebas kai;
+        font-family: 'Bebas Neue', cursive;
         font-size: 6em;
         position: absolute;
         top:2.4em;
@@ -590,7 +584,7 @@
     
       .second-article h4 {
     
-        font-family: Bebas Kai;
+        font-family: 'Bebas Neue', cursive;
         font-size: 30em;
         position: absolute;
         top: -.2em;
@@ -686,7 +680,7 @@
       color: black;
       font-size: 4em;
       cursor: crosshair;
-      font-family: Bebas Kai;
+      font-family: 'Bebas Neue', cursive;
         
         position: absolute;
         left: 0;
@@ -785,7 +779,7 @@
     footer h1 {
         
         color: white;
-        font-family: Bebas Kai;
+        font-family: 'Bebas Neue', cursive;
         font-size: 8em;
         display: none;
          
